--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
   </form>
 
   <button id='make-table' type='button'>Make a lobby</button>
-
-<button id='update-table' type='button'>Update Table</button>
+  <button id='update-table' type='button'>Update Table</button>
+  <button id='index-table' type='button'>index hand</button>
+  <button id='destroy-table' type='button'>destroy hand</button>
 
 <button id='create-hand' type='button'>create hand</button>
 <button id='update-hand' type='button'>update hand</button>
