--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
   <button id='make-table' type='button'>Make a lobby</button>
   <button id='update-table' type='button'>Update Table</button>
-  <button id='index-table' type='button'>index hand</button>
-  <button id='destroy-table' type='button'>destroy hand</button>
+  <button id='index-table' type='button'>index table</button>
+  <button id='destroy-table' type='button'>destroy table</button>
 
 <button id='create-hand' type='button'>create hand</button>
 <button id='update-hand' type='button'>update hand</button>
