added CRUD buttons for each resource, none working

--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
   <button id='index-table' type='button'>index table</button>
   <button id='destroy-table' type='button'>destroy table</button>
 
+  <button id='create-player' type='button'>Create player</button>
+  <button id='update-player' type='button'>Update player</button>
+  <button id='index-player' type='button'>index player</button>
+  <button id='destroy-player' type='button'>destroy player</button>
+
 <button id='create-hand' type='button'>create hand</button>
 <button id='update-hand' type='button'>update hand</button>
 <button id='index-hand' type='button'>index hand</button>
