Refactored for two folders for auth and hands
Have two seperate folders for auth and hands
  api / events/ ui for clarification purposes
Created a delete all buton
Got rid of tables and players buttons
  auth calls and ajax along with events

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
        <input type='submit' value='Change password!'>
   </form>
 
-  <button id='make-table' type='button'>Make a lobby</button>
+  <!-- <button id='make-table' type='button'>Make a lobby</button>
   <button id='update-table' type='button'>Update Table</button>
   <button id='index-table' type='button'>index table</button>
   <button id='destroy-table' type='button'>destroy table</button>
@@ -47,12 +47,14 @@
   <button id='create-player' type='button'>Create player</button>
   <button id='update-player' type='button'>Update player</button>
   <button id='index-player' type='button'>index player</button>
-  <button id='destroy-player' type='button'>destroy player</button>
+  <button id='destroy-player' type='button'>destroy player</button> -->
 
 <button id='create-hand' type='button'>create hand</button>
 <button id='update-hand' type='button'>update hand</button>
 <button id='index-hand' type='button'>index hand</button>
 <button id='destroy-hand' type='button'>destroy hand</button>
+
+<button id='destroy-all-hand' type='button'>destroy ALL hand</button>
 
 
     </body>
