Added buttons, api, ui, events for tables
All CRUD actions work

--- a/index.html
+++ b/index.html
@@ -57,5 +57,13 @@
 <button id='destroy-all-hand' type='button'>destroy ALL hand</button>
 
 
+<button id='create-table' type='button'>create table</button>
+<button id='update-table' type='button'>update table</button>
+<button id='index-table' type='button'>index table</button>
+<button id='destroy-table' type='button'>destroy table</button>
+
+<button id='destroy-all-table' type='button'>destroy ALL table</button>
+
+
     </body>
 </html>
