Added forms and api/events/ui for joining / leaving table

--- a/index.html
+++ b/index.html
@@ -39,16 +39,6 @@
        <input type='submit' value='Change password!'>
   </form>
 
-  <!-- <button id='make-table' type='button'>Make a lobby</button>
-  <button id='update-table' type='button'>Update Table</button>
-  <button id='index-table' type='button'>index table</button>
-  <button id='destroy-table' type='button'>destroy table</button>
-
-  <button id='create-player' type='button'>Create player</button>
-  <button id='update-player' type='button'>Update player</button>
-  <button id='index-player' type='button'>index player</button>
-  <button id='destroy-player' type='button'>destroy player</button> -->
-
 <button id='create-hand' type='button'>create hand</button>
 <button id='update-hand' type='button'>update hand</button>
 <button id='index-hand' type='button'>index hand</button>
@@ -61,6 +51,16 @@
 <button id='update-table' type='button'>update table</button>
 <button id='index-table' type='button'>index table</button>
 <button id='destroy-table' type='button'>destroy table</button>
+
+<form id='join-table'>
+    <input name="table[id]" type="text" placeholder="an@example.email">
+    <input type='submit' value='Join table!'>
+</form>
+
+<form id='leave-table'>
+    <input name="table[id]" type="text" placeholder="an@example.email">
+    <input type='submit' value='leave table!'>
+</form>
 
 <button id='destroy-all-table' type='button'>destroy ALL table</button>
 
