Added username get and set

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
          <input type='submit' value='Sign in!'>
     </form>
 
+    <form id='make-username'>
+         <input name="user[username]" type="text" placeholder="The dude">
+        <input type='submit' value='Make username!'>
+   </form>
+
     <form id='sign-out'>
         <input type='submit' value='Sign out!'>
    </form>
@@ -38,6 +43,8 @@
        <input name="passwords[new]" type="password" placeholder="an example password">
        <input type='submit' value='Change password!'>
   </form>
+
+  <button id='get-name' type='button'>get name</button>
 
 <button id='create-hand' type='button'>create hand</button>
 <button id='update-hand' type='button'>update hand</button>
