Added dealing to table and deleting all users hands

--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
 
 <button id='deal-table' type='button'>deal table</button>
 
+<button id='delete-user-hands' type='button'>clear users hands</button>
+
 
     </body>
 </html>
