Remade ui for front end
Fixed some api
super tired but super happy

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
       <div id='auth-messages'></div>
       <div id='game-messages'></div>
+
       <form id='sign-up'>
           <input name="credentials[email]" type="text" placeholder="an@example.email">
           <input name="credentials[password]" type="password" placeholder="an example password">
@@ -44,9 +45,9 @@
        <input type='submit' value='Change password!'>
   </form>
 
-<button id='get-name' type='button'>get name</button>
+<!-- <button id='get-name' type='button'>get name</button> -->
 
- <button id='create-hand' type='button'>create hand</button>
+ <!-- <button id='create-hand' type='button'>create hand</button> -->
  <!--
 <button id='update-hand' type='button'>update hand</button>
 <button id='index-hand' type='button'>index hand</button>
@@ -58,6 +59,10 @@
 
 
 <button id='create-table' type='button'>create table</button>
+
+<button id='deal-table' type='button'>deal table</button>
+
+<button id='delete-user-hands' type='button'>clear users hands</button>
 <!--
 <button id='update-table' type='button'>update table</button>
 <button id='index-table' type='button'>index table</button>
@@ -78,9 +83,21 @@
     <input type='submit' value='leave owner table!'>
 </form>
 
-<button id='deal-table' type='button'>deal table</button>
+<!-- <div id='player-one-header'>Player One:
+  <div id='player-one'></div>
+</div>
 
-<button id='delete-user-hands' type='button'>clear users hands</button>
+<div id='player-two-header'>Player Two:
+  <div id='player-two'></div>
+</div>
+
+<div id='player-three-header'>Player Three:
+  <div id='player-three'></div>
+</div>
+
+<div id='player-four-header'>Player Four:
+  <div id='player-four'></div>
+</div> -->
 
 
     </body>
