Added button and route to deal for single player

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 <button id='create-table' type='button'>create table</button>
 
 <button id='deal-table' type='button'>deal table</button>
+<button id='deal-player' type='button'>deal player</button>
 
 <button id='delete-user-hands' type='button'>clear users hands</button>
 <!--
