Added startGame function plus names
Stargame function runs dealTable and then iterates through
  all user id's at table to give card to each
  currently doesnt give on to owner /
  also need to make it so it doesnt make a new table every time /
  can run by self

Each player now has a deal and check button
  NOT IMPLEMENTED YET

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <button id='create-table' type='button'>create table</button>
 
-<button id='deal-table' type='button'>deal table</button>
+<button id='deal-table' type='button'>Start Game</button>
 <button id='deal-player' type='button'>deal player</button>
 
 <button id='delete-user-hands' type='button'>clear users hands</button>
@@ -84,21 +84,37 @@
     <input type='submit' value='leave owner table!'>
 </form>
 
-<!-- <div id='player-one-header'>Player One:
-  <div id='player-one'></div>
+<div id='player-one-header'>Player One:
+  <div id='player-one'>NA</div>
+  <div id='player-one-buttons'>
+    <button id='deal-player-one' type='button'>Deal</button>
+    <button id='check-player-one' type='button'>Check</button>
+  </div>
 </div>
 
 <div id='player-two-header'>Player Two:
-  <div id='player-two'></div>
+  <div id='player-two'>NA</div>
+  <div id='player-two-buttons'>
+    <button id='deal-player-two' type='button'>Deal</button>
+    <button id='check-player-two' type='button'>Check</button>
+  </div>
 </div>
 
 <div id='player-three-header'>Player Three:
-  <div id='player-three'></div>
+  <div id='player-three'>NA</div>
+  <div id='player-three-buttons'>
+    <button id='deal-player-three' type='button'>Deal</button>
+    <button id='check-player-three' type='button'>Check</button>
+  </div>
 </div>
 
 <div id='player-four-header'>Player Four:
-  <div id='player-four'></div>
-</div> -->
+  <div id='player-four'>Na</div>
+  <div id='player-four-buttons'>
+    <button id='deal-player-four' type='button'>Deal</button>
+    <button id='check-player-four' type='button'>Check</button>
+  </div>
+</div>
 
 
     </body>
