Changed so when created, hand no longer created as well Took out deal Player button, ow added below

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <button id='create-table' type='button'>create table</button>
 
 <button id='deal-table' type='button'>Start Game</button>
-<button id='deal-player' type='button'>deal player</button>
+<!-- <button id='deal-player' type='button'>deal player</button> -->
 
 <button id='delete-user-hands' type='button'>clear users hands</button>
 <!--
@@ -74,10 +74,12 @@
     <input type='submit' value='Join table!'>
 </form>
 
-<form id='leave-table-user'>
+<!-- <form id='leave-table-user'>
     <input name="table[id]" type="text" placeholder="Table id">
     <input type='submit' value='leave user table!'>
-</form>
+</form> -->
+
+<button id='leave-table-user' type='button'>Leave as user</button>
 
 <form id='leave-table-owner'>
     <input name="table[id]" type="text" placeholder="table id">
